@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-14T08:28:39Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 1 ],
-  "count_prev_day_inc" : 1,
+  "timestamp" : "2022-05-14T16:33:40Z",
+  "count" : 2,
+  "count_minmax" : [ 1, 2 ],
+  "count_prev_day_inc" : 2,
   "count_prev_day_dec" : 0,
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
