@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-14T08:28:39Z",
-  "count_outdated" : 119,
-  "uniques_outdated" : 40,
-  "count" : 153,
+  "timestamp" : "2022-05-14T16:33:40Z",
+  "count_outdated" : 120,
+  "uniques_outdated" : 41,
+  "count" : 154,
   "uniques" : 63,
   "clones" : [
-    {
-      "timestamp": "2022-04-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
-    },
     {
       "timestamp": "2022-05-01T00:00:00Z",
       "count": 2,
@@ -98,8 +91,8 @@
     },
     {
       "timestamp": "2022-05-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
