@@ -1,12 +1,7 @@
 {
   "count": 34,
-  "uniques": 9,
+  "uniques": 8,
   "clones": [
-    {
-      "timestamp": "2022-04-30T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-01T00:00:00Z",
       "count": 2,
@@ -69,7 +64,7 @@
     },
     {
       "timestamp": "2022-05-14T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
