@@ -1,3 +1,10 @@
+2022-05-14T16:33:40Z:
+* notice: last 14d: all unq: 34 8
+* notice: prev accum: outdated-all outdated-unq / all unq: 119 40 / 153 63
+* notice: next accum: outdated-all outdated-unq / all unq: 120 41 / 154 63
+* notice: prev json diff / prev day diff: unq all: +0 +1 -0 -0 / +1 +2 -0 -0
+* notice: changed dates: [2022-05-14]
+
 2022-05-14T08:28:39Z:
 * notice: last 14d: all unq: 34 9
 * notice: prev accum: outdated-all outdated-unq / all unq: 119 40 / 152 62
